Changing hello.html file
Change 'Link' to 'Page'

--- a/hello.html
+++ b/hello.html
@@ -13,18 +13,18 @@
 		 &nbsp;
 		<a 
 		href="">
-			Link 1
+			Page 1
 		</a>
 		&nbsp;
 		<a 
 		href="">
-			Link 2
+			Page 2
 		</a>
 
 		<hr></hr>
 
 		<h1>
-		Hello World!
+		Hello, World!
 		</h1>
 		List
 		<ul>
