--- a/hello.html
+++ b/hello.html
@@ -32,6 +32,6 @@
 			<li>item 2</li>
 			<li>item 3</li>
 		</ul>
-	        <img src="helloworld.png">
+	        <img src="hellopug.jpg">
 	</body>
 </html>
