--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,9 @@
 <html>
 	<head>
 		<title>Hello World!</title>
-		<!-->
-		<link rel="stylesheet" type="text/css" href="no.css"/>
-		<-->
+		<link rel="stylesheet" type="text/css" href="helloworld.css"/>
 	</head>
-	<body>
+        <body>
 		<a 
 		href="hello.html">
 			Home
@@ -23,15 +21,16 @@
 
 		<hr></hr>
 
-		<h1>
-		Hello, World!
-		</h1>
-		List
+                <div>
+		<h1>Hello, World!</h1>
+		<h2>My Hobbies</h2>
 		<ul>
-			<li>item 1</li>
-			<li>item 2</li>
-			<li>item 3</li>
+		    <li>Chewing on things</li>
+		    <li>Chasing my tail</li>
+		    <li>Eating stuff off the floor</li>
 		</ul>
-	        <img src="hellopug.jpg">
-	</body>
+                <div>&nbsp;</div>
+                <img src="hellopug.jpg">
+                </div>
+        </body>
 </html>
