--- a/hello.html
+++ b/hello.html
@@ -31,6 +31,7 @@
 		</ul>
                 <div>&nbsp;</div>
                 <img src="hellopug.jpg">
+	        <div>&nbsp;</div>
                 </div>
         </body>
 </html>
