--- a/hello.html
+++ b/hello.html
@@ -19,18 +19,18 @@
 			Page 2
 		</a>
 
-		<hr></hr>
+		<br>
 
                 <div>
 		<h1>Hello, World!</h1>
-		<h2>My Hobbies</h2>
+		<h2>List</h2>
 		<ul>
-		    <li>Chewing on things</li>
-		    <li>Chasing my tail</li>
-		    <li>Eating stuff off the floor</li>
+		    <li>First item</li>
+		    <li>Second item</li>
+		    <li>Third item</li>
 		</ul>
                 <div>&nbsp;</div>
-                <img src="hellopug.jpg">
+                <img src="helloworld.png">
 	        <div>&nbsp;</div>
                 </div>
         </body>
